sites/all/themes/pul_development_theme/css/global.css
/* ... */
ul.nice-menu.nice-menu-menu-collection-development-webs li a:hover, ul.nice-menu.nice-menu-menu-collection-development-webs li a.active {
    font-size: 100%;
    color: #F58026;
  }

/* !Important Dropdowns */
ul.nice-menu.nice-menu-menu-collection-development-webs ul {
  top: 2.4em;
  left: .lem;
  background-color: #000;
  padding:0;
  border:0;
  margin:0;
}

/* Arrows 

.context-collections ul.nice-menu.nice-menu-menu-collection-development-webs.nice-menu-down li.menuparent,
.context-collections ul.nice-menu.nice-menu-menu-collection-development-webs.nice-menu-down li li.menuparent {
  background: #000; url("../images/arrow-down.png") right center no-repeat;
}
*/

.context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
	z-index: 1000;
}

.context-collections-and-collection-development #section-header, .context-collections #section-header {
	z-index: 1001;
}

ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a {
  padding-right: 15px;
  color: #fff;
  font-size: 1em;
}

ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
  padding-right: 15px;
  color: #F58026;
}


.context-collections .top-region.panel-panel.grid-12 {
	z-index: 999;
}
/* Override for Z-index issue for CDL menu */
.context-collections .panel-panel.grid-9, .context-collections .panel-panel.grid-3 {
  z-index: 1;
}

.context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
	z-index: 9999;
}

.context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 {
	z-index: 999;
}

.context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 ul.nice-menu-menu-collection-development-webs {
	z-index: 666;
}


.context-collections-and-collection-development .panel-pane.pane-views-panes.pane-spotlight-graphics-panel-pane-1 {
	z-index: 1;
}

/* Views Alignment for selector Profile Page */

.node-type-subject-specialists .field-type-text {
  display: inline;
}


.views-field-field-puluser-officialtitle h3, .node-type-subject-specialists .views-field-field-selector-subject-areas > h3.views-label-field-selector-subject-areas {
  margin: 0 0 0 0;
}

.node-type-subject-specialists .views-field-field-selector-subject-areas {
 clear: both;
}

.views-field-field-puluser-officialtitle h3 {
  margin-bottom: .5em;
}

.views-field-field-selector-subject-areas, .node-type-subject-specialists .field-name-field-bio {
  border-top: .1em solid #000;
  padding-top: .5em;
  margin-top: .5em;
}

.node-type-subject-specialists .views-field-picture {
  width: 15em;
  float: left;
  padding-bottom: 1em;
}

.views-field .views-field-view {
 
  padding-left: 1em; 
  width: 30em;
  float: right;
  padding-bottom: 1em;
}

.node-type-subject-specialists .views-field-picture img {
  vertical-align: middle;
}

.node-type-subject-specialists .view-id-cdl_subject_selector_bio.view-display-id-selector_directory_info {
}

/* specialists table */
.pane-subject-specialists-panel-pane-1 table caption {
  text-align: left;
  font-size: 1.37em;
  color: #777;
  padding: 0 0 0 0;
  padding-bottom: .5em;
}

.context-collections .views-field-field-puluser-phone-number {
  display: block;
}

